design: alignment fixes

--- a/src/components/ProfileSection/ProfileSection.css
+++ b/src/components/ProfileSection/ProfileSection.css
@@ -29,6 +29,7 @@
 
 .profile-info {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
   max-width: 100%;
@@ -86,9 +87,11 @@
 }
 
 .goal-section {
+  width: 100%;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: flex-end;
+  align-items: flex-start;
   gap: 4px;
   padding-top: 10px;
   position: relative;
